--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,9 +13,9 @@
 /* --------------------------------------------*/
 
 body{
-    font-family: 'Karla', sans-serif;
-    margin:6rem;
-    color: #323a45;
+  font-family: 'Karla', sans-serif;
+  margin:6rem;
+  color: #323a45;
 }
 
 a{
@@ -57,7 +57,6 @@ header i.fa-bars{
 }
 
 
-
 /* --------------------------------------------*/
 /* ------------------- SHOP -------------------*/
 /* --------------------------------------------*/
@@ -78,8 +77,7 @@ img{
 figcaption{
   display: grid;
   grid-template-columns: 80% 20%;
-  margin-top:1rem;
-  margin-bottom:2rem;
+  margin:1rem 0 2rem 0;
 }
 
 .price{
@@ -138,15 +136,6 @@ footer p.copyright{
   color:#848484;
 }
 
-i.fa-circle{
-  font-size: 0.3rem;
-  padding: 10px 7px;
-  vertical-align: top;
-}
-
-
-
-
 
 /* --------------------------------------------*/
 /* ------------------ MOBILE ------------------*/
@@ -175,7 +164,7 @@ i.fa-circle{
     font-size:1.5rem;
   }
   main{
-    grid-template-columns: 1fr ;
+    grid-template-columns: 1fr;
   }
   .gridBigPicture{
       grid-column: 1/2;
@@ -194,7 +183,4 @@ i.fa-circle{
   .copyright{
     font-size:0.9rem;
   }
-
-
-
 }
